[gd_scene load_steps=5 format=3 uid="uid://dgd32v05mg31o"]

[ext_resource type="Texture2D" uid="uid://bwk17hkwyarfg" path="res://sprite/Sprite-0004.svg" id="1_lti8b"]
[ext_resource type="Script" uid="uid://bbbxnrm2uwkjv" path="res://menu.gd" id="1_ouk20"]

[sub_resource type="CameraTexture" id="CameraTexture_ouk20"]

[sub_resource type="CanvasTexture" id="CanvasTexture_mae5d"]
specular_texture = SubResource("CameraTexture_ouk20")
texture_filter = 3

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_ouk20")

[node name="Sprite0004" type="Sprite2D" parent="."]
position = Vector2(792, 632.00006)
scale = Vector2(24.749998, 20.0625)
texture = ExtResource("1_lti8b")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.99700004
anchor_bottom = 0.6
offset_right = 8.73999
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Старт"
autowrap_mode = 2
autowrap_trim_flags = 0

[node name="Minigame" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Мини-игры"

[node name="Setting" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Настройки"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Выход"
icon = SubResource("CanvasTexture_mae5d")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Minigame" to="." method="_on_minigame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
